--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Start Learning</h5>
             <button
               type="button"
               class="btn-close"
