--- a/index.html
+++ b/index.html
@@ -99,16 +99,59 @@
       <div class="d-md-flex justify-content-between align-items-center">
         <h3 class="mb-3m mb-md-0">Sign Up For Our Newsletter</h3>
 
-        <div class="input-group news-input">
+        <n class="input-group news-input">
           <input
-            type="text"
-            class="form-control"
+            type="email"
+            size="0"
+            class="form-control newsletterInput"
             placeholder="Enter email..."
-          />
-          <button class="btn btn-dark btn-lg" type="button" id="button-addon2">
-            Button
-          </button>
-        </div>
+            >
+
+              <i class="bi bi-check-circle-fill icon-green position-absolute "></i>
+          
+
+
+        <input
+            class="btn btn-dark btn-lg showAlert position-relative"
+            type="submit"
+            disabled
+          >
+
+          <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+            <symbol
+              id="check-circle-fill"
+              fill="currentColor"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
+              />
+            </symbol>
+          </svg>
+
+          <div
+            class="alert alert-success d-none align-items-center"
+            role="alert"
+            id="subscribed"
+          >
+            <svg
+              class="bi flex-shrink-0 me-2"
+              width="24"
+              height="24"
+              role="img"
+              aria-label="Success:"
+            >
+              <use xlink:href="#check-circle-fill" />
+            </svg>
+            <div>Successfully subscribed!</div>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="alert"
+              aria-label="Close"
+            ></button>
+          </div>
+        </form>
       </div>
     </section>
 
@@ -569,6 +612,7 @@
       </div>
     </div>
 
+    <script src="script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
